[project]
name = "pelicanwebsitebuilder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jdatetime>=5.2.0",
    "loguru>=0.7.3",
    "peewee>=3.18.3",
    "tornado>=6.5.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0",
    "pelican>=4.11.0.post0",
    "markdown>=3.10",
    "pygments>=2.18.0",
    "pyyaml>=6.0.3",
    "ghp-import>=2.1.0",
    "invoke>=2.2.1",
    "pysvg>=0.2.2",
    "webassets>=3.0.0",
    "fab>=3.1.0",
    "google-api-python-client>=2.187.0",
    "oauth2client>=4.1.3",
    "parsedatetime>=2.6",
    "beautifulsoup4>=4.14.3",
    "pytz>=2025.2",
    "pathlib>=1.0.1",
]
